--- a/TGS8.html
+++ b/TGS8.html
@@ -79,7 +79,7 @@
         },
         methods: {
             resetForm(){
-                this.toDo.judul= "";
+                this.toDo.judul= null;
                 this.toDo.isPenting= "";
                 this.toDo.note= "";
             },
